# web_engineer_in_rust

./: LICENSE  README.md
chapter2/: README.md
chapter2/data/: time_series_test.csv
chapter2/python/: README.md  _generate_time_series.py  _plot_time_series.ipynb  pyproject.toml  run_calc_batch_list.py  run_calc_batch_numpy.py  run_calc_stream.py
chapter2/rust/: Cargo.toml  README.md
chapter2/rust/src/: run_calc_batch.rs  run_calc_polars.rs  run_calc_stream.rs  run_calc_stream_async.rs  run_calc_stream_channel.rs
chapter3/: README.md
chapter3/rust/: Cargo.toml  README.md
chapter3/rust/src/: moving_average_f64.rs  moving_average_trait.rs  moving_average_trait1.rs  thread_safe_queue.rs  trait_abstraction.rs  use_trait_extension.rs
season2_chapter1/: Cargo.toml  README.md  docker-compose.yml
season2_chapter1/docker/mysql/: Dockerfile
season2_chapter1/docker/rust/: Dockerfile
season2_chapter1/sql/ddl/: iris_measurement_create.sql
season2_chapter1/src/: init_db.rs  lib.rs  main.rs
season2_chapter2/: Cargo.toml  README.md  docker-compose.yml
season2_chapter2/data/: iris.csv
season2_chapter2/docker/rust/: Dockerfile
season2_chapter2/front/: .eslintignore  .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
season2_chapter2/front/src/front/: Ruitter.module.scss  Ruitter.tsx  index.tsx
season2_chapter2/front/src/lib/: env.ts
season2_chapter2/front/src/lib/api/: login.ts
season2_chapter2/server/: Cargo.toml  README.md
season2_chapter2/server/sql/ddl/: follow_relations_create.sql
season2_chapter2/server/src/: endpoints.rs  init_db.rs  main.rs  models.rs
season2_chapter2/sql/ddl/: iris_measurements_create.sql  user_following_relations.sql  user_memos_create.sql  user_tweets_create.sql  users_create.sql
season2_chapter2/src/: endpoints.rs  init_db.rs  lib.rs  main.rs  models.rs
season2_chapter3/: README.md
season2_chapter3/python/: README.md  _create_irisx10000.py  aggregate_query.py  pyproject.toml  time_series_query.py
season2_chapter3/rust/: Cargo.toml  README.md
season2_chapter3/rust/src/: time_series_query.rs
