[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2021"
name = "web_engineer_in_rust"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
async-session = "3.0.0"
async-sqlx-session = {version = "0.4.0", features = ["mysql"]}
axum = {version = "0.4.8", features = ["headers", "http2", "ws", "tower-log"]}
axum-macros = "0.1.2"
futures = "0.3.21"
serde = "1.0.136"
serde_json = "1.0.79"
sqlx = {version = "0.5.11", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"]}
tokio = {version = "1.17.0", features = ["full"]}

[[bin]]
name = "init_db"
path = "src/init_db.rs"
