[tool.poetry]
authors = ["NaokiFujita <fujitanaoki0718@gmail.com>"]
description = "test script for cross-language performance comparison"
name = "web_engineer_in_rust"
version = "0.1.0"

[tool.poetry.dependencies]
numba = "^0.54.1"
numpy = "^1.20.3"
pandas = "^1.3.4"
python = "~3.9"
ipython = "^7.28.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
