[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2021"
license = "MIT"
name = "web_engineer_in_rust"
rust-version = "1.64.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.65"
polars = {version = "0.24.3", features = ["lazy", "csv-file", "rolling_window"]}
serde_json = "1.0.68"

[[bin]]
name = "time_series_query"
path = "src/time_series_query.rs"
